...
  <string name="revision_card_toolbar_title">Revision Card</string>
  <string name="stop_exploration_dialog_title">Leave to Topic Page?</string>
  <string name="stop_exploration_dialog_description">Your progress will not be saved.</string>
  <string name="stop_exploration_dialog_cancel_button">Cancel</string>
  <string name="stop_exploration_dialog_leave_button">Leave</string>
  <string name="topic_practice_master_these_skills">Master These Skills</string>
  <string name="topic_name_text_view">Ratios and Proportional Reasoning</string>
  <string name="topic_practice_skills_description">Select skills that you would like to practice.</string>
  <string name="topic_practice_start">Start</string>
  <string name="state_continue_button">Continue</string>
  <string name="state_continue_submit">Submit</string>
  <string name="previous_state_description">Navigate to the previous card</string>
  <string name="next_state_description">Navigate to the next card</string>
...
  <string name="numeric_input_content_description">Enter a number.</string>
  <string name="number_with_units_input_hint_text">Write numbers with units here.</string>
  <string name="enable_audio_playback_content_description">Enable audio voiceover for this lesson.</string>
  <string name="recently_played_stories">Recently-Played Stories</string>
  <string name="last_played_stories">Last-Played Stories</string>
  <string name="view_all">View All</string>
  <string name="ongoing_story_last_week">Played within the Last Week</string>
  <string name="ongoing_story_last_month">Played within the Last Month</string>
  <string name="lesson_thumbnail_content_description">Image for %s</string>
  <string name="all_topics">All Topics</string>
  <string name="stories_you_can_play">Stories You Can Play</string>
  <string name="navigate_up">Navigate up</string>
  <string name="recently_played_activity">Recently-Played Stories</string>
  <string name="topic_downloaded">Topic Downloaded</string>
  <string name="downloaded">Downloaded</string>
  <string name="question_player_title">Practice Mode</string>
  <string name="question_training_session_progress">Question %d of %d</string>
  <string name="question_training_session_progress_finished">Complete</string>
  <string name="question_training_session_finished_header">Finished</string>
...
    description="The default hint text for the ratio interaction if the placeholder text is not available.">
    Enter a ratio in the form x:y.
  </string>
  <string name="smallest_text_size_content_description">Smallest text size</string>
  <string name="largest_text_size_content_description">Largest text size</string>
  <string name="coming_soon">Coming Soon</string>
  <string name="recommended_stories">Recommended Stories</string>
  <string name="stories_for_you">Stories For You</string>
</resources>

